2012-05-31  Kai Tietz  <ktietz@redhat.com>

	* crtdefs.h (errcode): Don't define it by default.

2012-05-10  Christian Franke <Christian.Franke@t-...>
	    Kai Tietz  <ktietz@redhat.com>

	PR 3523559
	* stdio.h: Guard override-function for C++ to work-around
	a g++ bug about builtins and static overrides.

2012-04-10  Ozkan Sezer  <sezeroz@gmail.com>

	* _mingw.h (__int128, __SIZEOF_INT128__): Handle clang.

2012-03-01  Jonathan Yong  <jon_y@users.sourceforge.net>

	* errno.h: Add EOVERFLOW for msvc 2010 compatibility.

2012-02-24  Kai Tietz  <ktietz@redhat.com>

	PR/3468894
	* _mingw.h (__uuidof): Use __typeof instead of typeof.

2012-01-17  Ozkan Sezer  <sezeroz@gmail.com>

	* time.h: Don't include pthread_time.h when we are compiling
	winpthreads.

2012-01-15  Jonathan Yong  <jon_y@users.sourceforge.net>

	* sec_api/string_s.h(strcat_s): Use CRT secure helper macro.
	(wcscpy_s): Likewise.
	(wcscat_s): Likewise.
	* sec_api/wchar_s.h(wcscpy_s): Likewise.
	(wcscat_s): Likewise.
	* sec_api/mbstring_s.h(_mbscat_s): Likewise.
	(_mbscpy_s): Likewise.

2012-01-12  Jonathan Yong  <jon_y@users.sourceforge.net>

	*_mingw_mac.h: Moved CRT secure macros to _mingw_secapi.h
	*_mingw_secapi.h: New, fix fallback cases.

2012-01-11  Jonathan Yong  <jon_y@users.sourceforge.net>

	* _mingw_mac.h(__CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_0_2_):
	Fix arguments.
	(__CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_MEMORY_0_3_): Likewise.

2012-01-11  Jonathan Yong  <jon_y@users.sourceforge.net>

	* _mingw_mac.h(__CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES1_):
	rename to __CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_0_2_.
	(__CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_MEMORY1_): Rename to
	__CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_MEMORY_0_3_.
	(__CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_MEMORY1_): Rename to
	__CRT_SECURE_CPP_OVERLOAD_SECURE_NAMES_MEMORY_0_4_.
	(__CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES1_): Rename to
	__CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_0_2_.
	(__CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_COUNT1_): Rename to