@@ -126,9 +126,13 @@ extern "C" {
 #if !defined (__ia64__)
   __CRT_INLINE double __cdecl fabs (double x)
   {
+#ifdef __x86_64__
+    return __builtin_fabs (x);
+#else
     double res = 0.0;
     __asm__ __volatile__ ("fabs;" : "=t" (res) : "0" (x));
     return res;
+#endif
   }
 #endif
 #endif
@@ -575,9 +579,13 @@ typedef long double double_t;
 #if !defined (__ia64__)
   __CRT_INLINE float __cdecl fabsf (float x)
   {
+#ifdef __x86_64__
+    return __builtin_fabsf (x);
+#else
     float res = 0.0F;
     __asm__ __volatile__ ("fabs;" : "=t" (res) : "0" (x));
     return res;
+#endif
   }
 #endif
 #endif
