@@ -44,6 +44,12 @@
 #define D3DCREATE_MIXED_VERTEXPROCESSING        __MSABI_LONG(0x00000080)
 #define D3DCREATE_DISABLE_DRIVER_MANAGEMENT     __MSABI_LONG(0x00000100)
 #define D3DCREATE_ADAPTERGROUP_DEVICE           __MSABI_LONG(0x00000200)
+#define D3DCREATE_DISABLE_DRIVER_MANAGEMENT_EX  __MSABI_LONG(0x00000400)
+#define D3DCREATE_NOWINDOWCHANGES               __MSABI_LONG(0x00000800)
+#define D3DCREATE_DISABLE_PSGP_THREADING        __MSABI_LONG(0x00002000)
+#define D3DCREATE_ENABLE_PRESENTSTATS           __MSABI_LONG(0x00004000)
+#define D3DCREATE_DISABLE_PRINTSCREEN           __MSABI_LONG(0x00008000)
+#define D3DCREATE_SCREENSAVER                   __MSABI_LONG(0x10000000)
 
 /*****************************************************************************
  * Flags for SetPrivateData
